2026-04-28_kubernetes_adecco_berlin/lab0/kubernetes/adecco_example/backend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /livez
              port: http
          resources:
            requests:
              cpu: 40m
              memory: 20Mi
            limits:
              cpu: 80m
              memory: 40Mi
