2026-04-28_kubernetes_adecco_berlin/lab0/kubernetes/adecco_example/frontend_go_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend-go
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/livez
              port: http
            failureThreshold: 10
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /api/livez
              port: http
          resources:
            requests:
              cpu: 40m
              memory: 20Mi
            limits:
              cpu: 80m
              memory: 40Mi
