2026-04-28_kubernetes_adecco_berlin/lab0/kubernetes/adecco_example/frontend_go_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - counter-from-manifests.aks.sikademo.com
      secretName: counter-from-manifests.aks.sikademo.com-tls
  rules:
    - host: counter-from-manifests.aks.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
